# stwo

./: .gitignore  Cargo.toml
.github/workflows/: ci.yaml
crates/prover/: Cargo.toml
crates/prover/benches/: merkle.rs  pcs.rs  poseidon.rs
crates/prover/src/: lib.rs
crates/prover/src/constraint_framework/: component.rs  logup.rs  point.rs  simd_domain.rs
crates/prover/src/core/: circle.rs  fri.rs  mod.rs  proof_of_work.rs  queries.rs  test_utils.rs  utils.rs
crates/prover/src/core/air/: accumulation.rs  air_ext.rs  components.rs
crates/prover/src/core/backend/: mod.rs
crates/prover/src/core/backend/cpu/: blake3.rs  mod.rs  poseidon31.rs  quotients.rs
crates/prover/src/core/backend/simd/: bit_reverse.rs  blake3.rs  cm31.rs  fri.rs  (+7 more)
crates/prover/src/core/channel/: blake3.rs  mod.rs  poseidon31.rs  sha256.rs
crates/prover/src/core/fields/: qm31.rs
crates/prover/src/core/lookups/: gkr_prover.rs  mle.rs  sumcheck.rs
crates/prover/src/core/pcs/: prover.rs  quotients.rs  verifier.rs
crates/prover/src/core/prover/: mod.rs
crates/prover/src/core/vcs/: blake3_hash.rs  blake3_merkle.rs  bws_sha256_hash.rs  bws_sha256_merkle.rs  mod.rs  poseidon31_hash.rs  poseidon31_merkle.rs  prover.rs  sha256_hash.rs
crates/prover/src/examples/: mod.rs
crates/prover/src/examples/fibonacci/: air.rs  component.rs  mod.rs
crates/prover/src/examples/plonk/: mod.rs
crates/prover/src/examples/poseidon/: mod.rs
crates/prover/src/examples/wide_fibonacci/: constraint_eval.rs  mod.rs  simd.rs
crates/prover/src/trace_generation/: mod.rs  prove.rs
scripts/: clippy.sh
(+5 files in other folders)
