[workspace]
members = ["crates/prover"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
educe = "0.5.0"
hex = "0.4.3"
itertools = "0.12.0"
num-traits = "0.2.17"
thiserror = "1.0.56"
bytemuck = "1.14.3"
tracing = "0.1.40"
indexmap = "2.2.6"
sha2 = "0.10.8"
blake3 = "1.5.5"
poseidon2-m31 = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/poseidon2-m31" }

[profile.bench]
codegen-units = 1
lto = true
